@@ -2,7 +2,7 @@ package com.meterware.httpunit;
 /********************************************************************************************************************
 * $Id$
 *
-* Copyright (c) 2000-2002, Russell Gold
+* Copyright (c) 2000-2004, Russell Gold
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
 * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
@@ -203,12 +203,6 @@ public class HttpUnitUtils {
             }
         }
         return sb.toString();
-    }
-
-
-    private static String trimFromMiddle( String s, int ch ) {
-        int index = s.indexOf( ch );
-        return s.substring( 0, index ) + s.substring( index+1 );
     }
 
 
